src/Gateway/envoy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: EDGE
          route_config:
            virtual_hosts:
            - name: all_domains
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/authentication"
                route:  
                  cluster: dapr
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/auth-service-api/method/"
              - match:
                  prefix: "/users"
                route:
                  cluster: dapr
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/auth-service-api/method/"
              - match: 
                  prefix: "/products" 
                route:
                  cluster: dapr
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/product-service-api/method/"
          http_filters:
           - name: envoy.filters.http.router
             typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
           

  clusters:
  - name: dapr
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: dapr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3500
